--- a/package.json
+++ b/package.json
@@ -9,23 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.35.0",
+    "@blocknote/mantine": "^0.35.0",
+    "@blocknote/react": "^0.35.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
+    "@floating-ui/react": "^0.27.16",
+    "@heroui/date-picker": "^2.3.25",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "@types/js-cookie": "^3.0.6",
+    "ckeditor5": "^46.0.2",
+    "ckeditor5-premium-features": "^46.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.539.0",
     "nanoid": "^5.1.5",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-day-picker": "^9.8.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
     "recharts": "^3.1.2",
@@ -36,13 +50,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/starter-kit": "^3.3.0",
     "@types/d3-scale-chromatic": "^3.1.0",
+    "@types/lodash.throttle": "^4.1.9",
+    "@types/lowlight": "^0.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@welldone-software/why-did-you-render": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "sass": "^1.90.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
