--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "nanoid": "^5.1.5",
     "next": "15.4.6",
     "react": "19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.1",
     "react-select": "^5.10.2",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
