--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.539.0",
     "nanoid": "^5.1.5",
@@ -40,11 +42,13 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "react-select": "^5.10.2",
     "recharts": "^3.1.2",
+    "sweetalert2": "^11.22.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
@@ -55,6 +59,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/starter-kit": "^3.3.0",
     "@types/d3-scale-chromatic": "^3.1.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.throttle": "^4.1.9",
     "@types/lowlight": "^0.0.7",
     "@types/node": "^20",
